--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,3 @@
-/* div #till_ccn_div,
-#till_cvv_div {
-    height: 28px;
-    margin-bottom: 4px;
-} */
-
 #till_cardholder,
 #till_expirydate,
 #till_cardholder {
@@ -80,4 +74,8 @@
   pointer-events: none;
   height: 0;
   overflow: hidden;
+}
+
+.field-error-message {
+  color: red;
 }
